--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
-title: Genetic and density of felids
+title: Hello world !
 author: Amira Azizan
 description: > # this means to ignore newlines until "baseurl:"
-  This is the project website.
+  This is my personal website.
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+github_username:  itsamira # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 theme: minima
